master: PostByTags rendering function defined

--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
     "Name":"SlingPages",
     "Database":"spd",
     "Status":"Active",
-    "Live":"No",
+    "Live":"Yes",
     "Theme":"shortshot"
 }
